deployments/client/deplyment-xdsclient.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-xdsclient
  labels:
    app.kubernetes.io/name: go-grpc-xdsclient
    name: go-grpc-xdsclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: go-grpc-xdsclient
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-grpc-xdsclient
    spec:
      restartPolicy: Always
      containers:
      - name: go-grpc-xdsclient
        image: ${ARTIFACT_REGION}-docker.pkg.dev/${ARTIFACT_PROJECT_ID}/go-grpc-xdsclient/dev:latest
        imagePullPolicy: Always
        ports:
          - name: tcp
            containerPort: 8080
        volumeMounts:
          - name: xds_bootstrap
            mountPath: /app/xds_bootstrap
            readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
        - name: xds_bootstrap
          hostPath:
            path: /home/cireader258/xds_bootstrap
            type: Directory


---

apiVersion: v1
kind: Service
metadata:
  name: go-grpc-xdsclient
  labels:
    app.kubernetes.io/name: go-grpc-xdsclient
spec:
  selector:
    app.kubernetes.io/name: go-grpc-xdsclient
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
