deployments/client/ingress-dnsclient.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-grpc-dnsclient-ingress
spec:
  ingressClassName: public
  rules:
  - host: go-grpc-dnsclient.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-grpc-dnsclient
            port:
              number: 80
