deployments/client/ingress-xdsclient.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-grpc-xdsclient-ingress
spec:
  ingressClassName: public
  rules:
  - host: go-grpc-xdsclient.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-grpc-xdsclient
            port:
              number: 80
